hphp/test/slow/dict/hh-only1.php.expectf
Fatal error: A subscript index cannot be a list in %s/test/slow/dict/hh-only1.php on line 5